--- a/app/views/static/news.html.haml
+++ b/app/views/static/news.html.haml
@@ -1,2 +1,3 @@
-%h1 Static#main
-%p Find me in app/views/static/main.html.haml
+- news.each do |article|
+  %p= article.name
+  .news-text= article.article
