--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -28,7 +28,7 @@
         %a.navbar-brand(href="#") Zbattle
         .navbar-collapse.collapse.navbar-responsive-collapse
           %ul.nav.navbar-nav
-            -# %li= link_to 'Новости', admin_news_path
+            %li= link_to 'Новости', admin_news_articles_path
             %li= link_to 'Баттлы', admin_battles_path
             -# %li= link_to 'Стримы', admin_streams_path
 
