--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -1,19 +1,19 @@
-= form_for @user do |f|
-  - if @user.errors.any?
+= bootstrap_form_for user do |f|
+  - if user.errors.any?
     #error_explanation
-      %h2= "#{pluralize(@user.errors.count, "error")} prohibited this user from being saved:"
       %ul
-        - @user.errors.full_messages.each do |msg|
+        - user.errors.full_messages.each do |msg|
           %li= msg
 
   .field
-    = f.label :name
-    = f.text_field :name
+    = f.text_field :name, label: 'Имя'
   .field
-    = f.label :surname
-    = f.text_field :surname
+    = f.text_field :surname, label: 'Фамилия'
   .field
-    = f.label :city
-    = f.text_field :city
+    = f.text_field :city, label: 'Город'
+  .field
+    = f.text_field :login, label: 'Логин'
+  .field
+    = f.password_field :password, label: 'Пароль'
   .actions
-    = f.submit 'Save'
+    = f.submit 'Зарегистрироваться'
