--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -2,14 +2,12 @@
 
 %p
   %b Name:
-  = @user.name
+  = user.name
 %p
   %b Surname:
-  = @user.surname
+  = user.surname
 %p
   %b City:
-  = @user.city
+  = user.city
 
-= link_to 'Edit', edit_user_path(@user)
-\|
-= link_to 'Back', users_path
+= link_to 'Изменить', edit_user_path(user)
