--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,120 +17,144 @@
 body {
   min-width: 1300px;
   background-color: #323232;
+  overflow-x: hidden
 }
 
-.carousel, .carousel-inner {
-  height: 100%;
-}
-
-#myCarousel {
-  overflow: hidden;
-}
-
-.favorite-works .item {
+.favorite-works {
+  margin-top: 30px;
+  margin-bottom: -15px;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   overflow-x: scroll;
+  height: 100%;
   width: 100%;
 }
 
-.favorite-works .item-item {
+.favorite-works .item {
   height: 200px;
   width: 200px;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
+
+
   -webkit-box-flex: 0;
   -webkit-flex: 0 0 auto;
   -ms-flex: 0 0 auto;
   flex: 0 0 auto;
-}
 
-.item-item .info {
-  opacity: 0;
-  filter: alpha(opacity=0); /* For IE8 and earlier */
+
   font-size: 30px;
-  width: 100%;
-  height: 100%;
-  background-color: black;
-  transition: opacity 0.3s;
-  -webkit-transition: opacity 0.3s;
+
+  background-size: 100%;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+
+  transition: all 0.5s;
+  -webkit-transition: all 0.5s;
+  -moz-transition: all 0.5s;
+  -webkit-transition: all 0.5s;
+  -o-transition: all 0.5s;
 }
 
+.item:hover {
+  background-size: 110%;
 
-.item-item .info p {
-  position: absolute;
-  bottom: 0;
-  margin-bottom: 0;
+  transition: all 0.5s;
+  -webkit-transition: all 0.5s;
+  -moz-transition: all 0.5s;
+  -webkit-transition: all 0.5s;
+  -o-transition: all 0.5s;
 }
 
-.item-item .info:hover {
-  opacity: 0.8;
-  filter: alpha(opacity=80); /* For IE8 and earlier */
+.item p {
+  bottom: -100px;
+  position: relative;
+  padding-left: 10px;
+  padding-top: 30px;
+  height: 100px;
+  color: rgba(0,0,0,0);
+
+  transition: all 0.5s;
+  -webkit-transition: all 0.5s;
+  -moz-transition: all 0.5s;
+  -webkit-transition: all 0.5s;
+  -o-transition: all 0.5s;
+}
+
+.item:hover p {
+  color: rgba(200,200,200,1);
+
+  background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.8) 50%, rgba(19,19,19,1) 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.8) 50%,rgba(19,19,19,1) 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.8) 50%,rgba(19,19,19,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+
+  transition: all 0.5s;
+  -webkit-transition: all 0.5s;
+  -moz-transition: all 0.5s;
+  -webkit-transition: all 0.5s;
+  -o-transition: all 0.5s;
 }
 
 @media (min-width: 640px) {
-  .favorite-works .item-item {
+  .favorite-works .item {
     width: 25%;
   }
 }
 
 @media (min-width: 768px) {
-  .favorite-works .item-item {
+  .favorite-works .item {
     width: 25%;
   }
 }
 
 @media (min-width: 992px) {
-  .favorite-works .item-item {
+  .favorite-works .item {
     width: 20%;
   }
 }
 
 
 @media (min-width: 3000px) {
-  .favorite-works .item-item {
+  .favorite-works .item {
     width: 7.14%;
   }
 }
 
 @media (min-width: 2560px) {
-  .favorite-works .item-item {
+  .favorite-works .item {
     width: 8.33%;
   }
 }
 
 @media (min-width: 2200px) {
-  .favorite-works .item-item {
+  .favorite-works .item {
     width: 10%;
   }
 }
 
 @media (min-width: 1920px) {
-  .favorite-works .item-item {
+  .favorite-works .item {
     width: 11.11111111111111%;
   }
 }
 
 
 @media (min-width: 1680px) {
-  .favorite-works .item-item {
+  .favorite-works .item {
     width: 12.5%;
   }
 }
 
 
 @media (min-width: 1440px) {
-  .favorite-works .item-item {
+  .favorite-works .item {
     width: 14.28%;
   }
 }
 
 
 @media (min-width: 1200px) {
-  .favorite-works .item-item {
+  .favorite-works .item {
     width: 16.67%;
   }
 }
@@ -149,4 +173,5 @@ body {
 footer {
   position: fixed;
   bottom: 0;
+  width: 100vw;
 }
