--- a/app/assets/stylesheets/bootstrap_and_overrides.css
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css
@@ -9,8 +9,8 @@
 footer {
   position: absolute;
   bottom: 0px;
-  height: 100px;
-  width: 100%;
+  height: 30px;
+  width: 100vw;
   background-color: black;
 }
 
