--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,7 +17,7 @@
 body {
   min-width: 1300px;
   background-color: #323232;
-  overflow-x: hidden
+  overflow-x: hidden;
 }
 
 .favorite-works {
@@ -28,6 +28,7 @@ body {
   display: -ms-flexbox;
   display: flex;
   overflow-x: scroll;
+  overflow-y: hidden;
   height: 100%;
   width: 100%;
 }
