--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -72,6 +72,7 @@ body {
   position: relative;
   padding-left: 10px;
   padding-top: 30px;
+  margin-bottom: 0;
   height: 100px;
   color: rgba(0,0,0,0);
 
