--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -75,6 +75,7 @@ body {
   margin-bottom: 0;
   height: 100px;
   color: rgba(0,0,0,0);
+  cursor: default;
 
   transition: all 0.5s;
   -webkit-transition: all 0.5s;
