--- a/app/views/layouts/bootstrap.html.haml
+++ b/app/views/layouts/bootstrap.html.haml
@@ -18,7 +18,8 @@
     .favorite-works
       - favorites.flatten.each_with_index do |url, index|
         .item{style: "background-image: url(#{image_url 'cats/' + url})"}
-          %p info
+          %p.name SpeedSculpt #46
+          %p.meta Vasya Pupkin - 1 place
 
     .navbar.navbar-inverse.navbar-static-top
       .container
