--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,13 +20,35 @@ body {
   overflow-x: hidden;
 }
 
+.favorite-nav {
+  height: 200px;
+  position: absolute;
+  z-index: 10;
+  text-align: center;
+  font-size: 25px;
+  cursor: pointer;
+}
+
+.favorite-nav span {
+  vertical-align: middle;
+  line-height: 200px;
+}
+
+.favorite-nav.left {
+  left: 0;
+}
+
+.favorite-nav.right {
+  right: 0;
+}
+
 .favorite-works {
   margin-top: 30px;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  overflow-x: scroll;
+  overflow-x: hidden;
   overflow-y: hidden;
   overflow-x: -moz-scrollbars-none;
   height: 100%;
