--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -100,6 +100,7 @@ body {
   font-size: 15px;
   bottom: -67px;
   padding-left: 13px;
+  font-size: 10px;
 
   transition: all 0.5s linear;
   -webkit-transition: all 0.5s;
@@ -122,7 +123,7 @@ body {
   -o-transition: all 0.5s linear;
 }
 
-.item p.name {
+.item .info {
   bottom: -100px;
   position: relative;
   padding-left: 10px;
@@ -132,6 +133,7 @@ body {
   color: rgba(0,0,0,0);
   cursor: default;
   user-select: none;
+  font-size: 10px;
 
   transition: all 0.5s;
   -webkit-transition: all 0.5s;
@@ -146,7 +148,7 @@ body {
   -ms-user-select: none; /* Internet Explorer/Edge */
 }
 
-.item:hover p.name {
+.item:hover .info {
   color: rgba(255,255,255,1);
 
   background: -moz-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(0,0,0,1) 100%); /* FF3.6-15 */
@@ -159,6 +161,15 @@ body {
   -moz-transition: all 0.5s;
   -webkit-transition: all 0.5s;
   -o-transition: all 0.5s;
+}
+
+.item .info .name {
+  font-size: 20px;
+  margin-top: 15px;
+}
+
+.item .info .meta {
+  font-size: 12px;
 }
 
 @media (min-width: 640px) {
