--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -69,11 +69,24 @@ body {
   -ms-flex: 0 0 auto;
   flex: 0 0 auto;
 
-  font-size: 30px;
+  will-change: transform;
+  transition: all 0.3s linear;
+  -webkit-transition: all 0.3s linear;
+  -moz-transition: all 0.3s linear;
+  -webkit-transition: all 0.3s linear;
+  -o-transition: all 0.3s linear;
+  overflow: hidden;
+}
 
-  background-size: 100%;
+.favorite-works .item .bg {
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-size: cover;
   background-repeat: no-repeat;
   background-position: 50% 50%;
+  transform: scale(1,1);
 
   will-change: transform;
   transition: all 0.3s linear;
@@ -84,7 +97,16 @@ body {
 }
 
 .item:hover {
-  background-size: 105%;
+  will-change: transform;
+  transition: all 0.3s linear;
+  -webkit-transition: all 0.3s linear;
+  -moz-transition: all 0.3s linear;
+  -webkit-transition: all 0.3s linear;
+  -o-transition: all 0.3s linear;
+}
+
+.item:hover .bg {
+  transform: scale(1.3,1.3);
 
   will-change: transform;
   transition: all 0.3s linear;
