--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -288,6 +288,8 @@ body {
 
 footer {
   position: fixed;
-  bottom: 0;
+  bottom: -30px;
   width: 100vw;
+  background-color: #222;
+  border: 1px solid black;
 }
