--- a/app/views/battles/index.html.haml
+++ b/app/views/battles/index.html.haml
@@ -1,3 +1,4 @@
 - battles.each do |battle|
-  = link_to battle_path(battle) do
-    %p= battle.name
+  .content-item
+    = link_to battle_path(battle) do
+      %p= battle.name
