--- a/app/views/static/news.html.haml
+++ b/app/views/static/news.html.haml
@@ -1,3 +1,4 @@
 - news.each do |article|
-  %p= article.name
-  .news-text= article.article
+  .content-item
+    %p= article.name
+    .news-text= article.article
