--- a/app/views/battles/show.html.haml
+++ b/app/views/battles/show.html.haml
@@ -3,6 +3,8 @@
     .col-lg-3
     .col-lg-4
       %h1= battle.name
+      - battle.description.split("\r").each do |p|
+        %p= p
       - if battle.current?
         %h1 participate
     .col-lg-5
