--- a/app/views/layouts/bootstrap.html.haml
+++ b/app/views/layouts/bootstrap.html.haml
@@ -34,8 +34,8 @@
             %span.icon-bar
               %span.icon-bar
                 %a.navbar-brand(href='#') Zbattle
-      .navbar-collapse.collapse.navbar-responsive-collapse
-        %ul.nav.navbar-nav
+      .navbar-collapse.collapse.navbar-responsive-collapse.navbar-center
+        %ul.nav.navbar-nav.menu
           %li= link_to 'Новости', news_path
           %li= link_to 'Баттлы', battles_path
           %li= link_to 'Стримы', streams_path
