--- a/app/views/static/main.html.haml
+++ b/app/views/static/main.html.haml
@@ -1,2 +1,3 @@
-%h1 Static#main
-%p Find me in app/views/static/main.html.haml
+.content-item
+  %h1 Static#main
+  %p Find me in app/views/static/main.html.haml
