--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -297,3 +297,12 @@ footer {
 .content-item {
   background-color: #aaa;
 }
+
+.battle-image {
+  margin-top: 10px;
+}
+
+.battle-image>img {
+  width: 100%;
+  background-color; #aaa;
+}
