--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,264 +16,8 @@
 
 body {
   min-width: 1300px;
-  background-color: #323232;
+  /* background-color: #525252; */
   overflow-x: hidden;
-}
-
-.favorite-nav {
-  height: 200px;
-  position: absolute;
-  z-index: 10;
-  text-align: center;
-  font-size: 25px;
-  cursor: pointer;
-}
-
-.favorite-nav span {
-  vertical-align: middle;
-  line-height: 200px;
-  color: white;
-  visibility: hidden;
-}
-
-.favorite-nav:hover span {
-  visibility: visible;
-}
-
-.favorite-nav.left {
-  left: 0;
-}
-
-.favorite-nav.left:hover {
-  background: -moz-linear-gradient(right, rgba(255,255,255,0) 0%, rgba(0,0,0,1) 100%); /* FF3.6-15 */
-  background: -webkit-linear-gradient(right, rgba(255,255,255,0) 0%,rgba(0,0,0,1) 100%); /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(to left, rgba(255,255,255,0) 0%,rgba(0,0,0,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#000000',GradientType=2 ); /* IE6-9 */
-}
-
-.favorite-nav.right {
-  right: 0;
-}
-
-.favorite-nav.right:hover {
-  background: -moz-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(0,0,0,1) 100%); /* FF3.6-15 */
-  background: -webkit-linear-gradient(left, rgba(255,255,255,0) 0%,rgba(0,0,0,1) 100%); /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(to right, rgba(255,255,255,0) 0%,rgba(0,0,0,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#000000',GradientType=3 ); /* IE6-9 */
-}
-
-.favorite-works {
-  margin-top: 30px;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  overflow-x: hidden;
-  overflow-y: hidden;
-  overflow-x: -moz-scrollbars-none;
-  height: 100%;
-  width: 100%;
-
-}
-
-.favorite-works::-webkit-scrollbar {
-  display: none;
-}
-
-.favorite-works .item {
-  height: 200px;
-  width: 200px;
-
-  -webkit-box-flex: 0;
-  -webkit-flex: 0 0 auto;
-  -ms-flex: 0 0 auto;
-  flex: 0 0 auto;
-
-  will-change: transform;
-  transition: all 0.3s linear;
-  -webkit-transition: all 0.3s linear;
-  -moz-transition: all 0.3s linear;
-  -webkit-transition: all 0.3s linear;
-  -o-transition: all 0.3s linear;
-  overflow: hidden;
-}
-
-.favorite-works .item .bg {
-  overflow: hidden;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
-  transform: scale(1,1);
-
-  will-change: transform;
-  transition: all 0.3s linear;
-  -webkit-transition: all 0.3s linear;
-  -moz-transition: all 0.3s linear;
-  -webkit-transition: all 0.3s linear;
-  -o-transition: all 0.3s linear;
-}
-
-.item:hover {
-  will-change: transform;
-  transition: all 0.3s linear;
-  -webkit-transition: all 0.3s linear;
-  -moz-transition: all 0.3s linear;
-  -webkit-transition: all 0.3s linear;
-  -o-transition: all 0.3s linear;
-}
-
-.item:hover .bg {
-  transform: scale(1.3,1.3);
-
-  will-change: transform;
-  transition: all 0.3s linear;
-  -webkit-transition: all 0.3s linear;
-  -moz-transition: all 0.3s linear;
-  -webkit-transition: all 0.3s linear;
-  -o-transition: all 0.3s linear;
-}
-
-.item p.meta {
-  color: rgba(0,0,0,0);
-  cursor: default;
-  font-size: 15px;
-  bottom: -67px;
-  padding-left: 13px;
-  font-size: 10px;
-
-  transition: all 0.5s linear;
-  -webkit-transition: all 0.5s;
-  -moz-transition: all 0.5s;
-  -webkit-transition: all 0.5s;
-  -o-transition: all 0.5s;
-
-  position: relative;
-  cursor: default;
-  user-select: none;
-}
-
-.item:hover p.meta {
-  color: rgba(255,255,255,1);
-
-  transition: all 0.5s linear;
-  -webkit-transition: all 0.5s linear;
-  -moz-transition: all 0.5s linear;
-  -webkit-transition: all 0.5s linear;
-  -o-transition: all 0.5s linear;
-}
-
-.item .info {
-  bottom: -100px;
-  position: relative;
-  padding-left: 10px;
-  padding-top: 30px;
-  margin-bottom: 0;
-  height: 100px;
-  color: rgba(0,0,0,0);
-  cursor: default;
-  user-select: none;
-  font-size: 10px;
-
-  transition: all 0.5s;
-  -webkit-transition: all 0.5s;
-  -moz-transition: all 0.5s;
-  -webkit-transition: all 0.5s;
-  -o-transition: all 0.5s;
-
-  -webkit-touch-callout: none; /* iOS Safari */
-  -webkit-user-select: none; /* Safari */
-  -khtml-user-select: none; /* Konqueror HTML */
-  -moz-user-select: none; /* Firefox */
-  -ms-user-select: none; /* Internet Explorer/Edge */
-}
-
-.item:hover .info {
-  color: rgba(255,255,255,1);
-
-  background: -moz-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(0,0,0,1) 100%); /* FF3.6-15 */
-  background: -webkit-linear-gradient(top, rgba(255,255,255,0) 0%,rgba(0,0,0,1) 100%); /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(to bottom, rgba(255,255,255,0) 0%,rgba(0,0,0,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#000000',GradientType=0 ); /* IE6-9 */
-
-  transition: all 0.5s;
-  -webkit-transition: all 0.5s;
-  -moz-transition: all 0.5s;
-  -webkit-transition: all 0.5s;
-  -o-transition: all 0.5s;
-}
-
-.item .info .name {
-  font-size: 20px;
-  margin-top: 15px;
-}
-
-.item .info .meta {
-  font-size: 12px;
-}
-
-@media (min-width: 640px) {
-  .favorite-works .item {
-    width: 25vw;
-  }
-}
-
-@media (min-width: 768px) {
-  .favorite-works .item {
-    width: 25vw;
-  }
-}
-
-@media (min-width: 992px) {
-  .favorite-works .item {
-    width: 20vw;
-  }
-}
-
-
-@media (min-width: 1200px) {
-  .favorite-works .item {
-    width: 16.67vw;
-  }
-}
-
-@media (min-width: 1440px) {
-  .favorite-works .item {
-    width: 14.28vw;
-  }
-}
-
-
-@media (min-width: 1680px) {
-  .favorite-works .item {
-    width: 12.5vw;
-  }
-}
-
-@media (min-width: 1920px) {
-  .favorite-works .item {
-    width: 11.11111111111111vw;
-  }
-}
-
-@media (min-width: 2200px) {
-  .favorite-works .item {
-    width: 10vw;
-  }
-}
-
-@media (min-width: 2560px) {
-  .favorite-works .item {
-    width: 8.33vw;
-  }
-}
-
-@media (min-width: 3000px) {
-  .favorite-works .item {
-    width: 7.14vw;
-  }
 }
 
 .navbar {
@@ -295,7 +39,7 @@ footer {
 }
 
 .content-item {
-  background-color: #aaa;
+  /* background-color: #aaa; */
 }
 
 .battle-image {
@@ -304,5 +48,5 @@ footer {
 
 .battle-image>img {
   width: 100%;
-  background-color: #aaa;
+  /* background-color: #aaa; */
 }
