--- a/app/views/layouts/bootstrap.html.haml
+++ b/app/views/layouts/bootstrap.html.haml
@@ -28,14 +28,11 @@
             .meta Vasya Pupkin - 1 place
 
     .navbar.navbar-default.navbar-static-top
-      .container
-        %button.navbar-toggle(type='button' data-toggle='collapse' data-target='.navbar-responsive-collapse')
-          %span.icon-bar
-            %span.icon-bar
-              %span.icon-bar
-                %a.navbar-brand(href='#') Zbattle
       .navbar-collapse.collapse.navbar-responsive-collapse.navbar-center
         %ul.nav.navbar-nav.menu
+          %li
+            %a.navbar-brand(href='#')
+              = image_tag 'logo', height: 20
           %li= link_to 'Новости', news_path
           %li= link_to 'Баттлы', battles_path
           %li= link_to 'Стримы', streams_path
@@ -46,8 +43,8 @@
               %li= link_to 'Админка', admin_root_path
             %li= link_to 'Привет, ' + current_user.name.to_s, root_path
             %li= link_to 'Выйти', session_path, method: :delete
-          -# - else
-            -# %li= link_to 'Регистрация', new_user_path
+          - else
+            %li= link_to 'Регистрация', new_user_path
             -# %li= link_to 'Войти', new_session_path
 
 
