--- a/app/assets/stylesheets/bootstrap_and_overrides.css
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css
@@ -7,12 +7,32 @@
   = require bootstrap.min.css
   */
 
+body {
+  min-width: 1300px;
+  overflow-x: hidden;
+  background-color: #333;
+}
+
+.navbar {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+}
+
+.navbar-default {
+  background-color: #333;
+  background-image: -webkit-linear-gradient(#333, #333);
+  background-image: -o-linear-gradient(#333, #333);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#333), to(#333));
+  background-image: linear-gradient(#333, #333);
+}
+
 footer {
-  position: absolute;
-  bottom: 0px;
-  height: 30px;
+  position: fixed;
+  bottom: -30px;
   width: 100vw;
-  background-color: black;
+  background-color: #222;
+  border: 1px solid black;
 }
 
 .favorite-works {
@@ -21,11 +41,11 @@ footer {
 
 .navbar {
   font-size: 25px;
-  padding-top: 10px;
 }
 
 main {
   top: 275px;
+  height: 2000px;
 }
 
 .show-page {
