--- a/app/views/layouts/bootstrap.html.haml
+++ b/app/views/layouts/bootstrap.html.haml
@@ -8,6 +8,7 @@
     = csrf_meta_tags
     = stylesheet_link_tag 'application', media:'all'
     = favicon_link_tag 'favicon.ico', rel: 'shortcut icon'
+    <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
     = javascript_include_tag 'application'
     / Le HTML5 shim, for IE6-8 support of HTML elements
     /[if lt IE 9]
