--- a/app/views/layouts/bootstrap.html.haml
+++ b/app/views/layouts/bootstrap.html.haml
@@ -33,7 +33,7 @@
         %ul.nav.navbar-nav.menu
           %li
             %a.navbar-brand(href='#')
-              = image_tag 'logo', height: 20
+              = image_tag image_path('logo'), height: 20
           %li= link_to 'Новости', news_path
           %li= link_to 'Баттлы', battles_path
           %li= link_to 'Стримы', streams_path
