--- a/app/views/layouts/bootstrap.html.haml
+++ b/app/views/layouts/bootstrap.html.haml
@@ -38,6 +38,7 @@
           %li= link_to 'Баттлы', battles_path
           %li= link_to 'Стримы', streams_path
           %li= link_to 'FAQ', streams_path
+          %li= link_to 'Туторы', streams_path
         %ul.nav.navbar-nav.navbar-right.login-buttons
           - if current_user
             - if current_admin
