--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -30,3 +30,8 @@ body {
   width: 100%;
   /* background-color: #aaa; */
 }
+
+.turbolinks-progress-bar {
+  background-color: red !important;
+  height: 5px !important;
+}
