--- a/app/assets/stylesheets/bootstrap_and_overrides.css
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css
@@ -3,14 +3,14 @@
 
   Use Font Awesome icons (default)
   To use Glyphicons sprites instead of Font Awesome, replace with "require twitter-bootstrap-static/sprites"
-  =require twitter-bootstrap-static/fontawesome
+  = require twitter-bootstrap-static/fontawesome
   = require bootstrap.min.css
   */
 
 body {
   min-width: 1300px;
   overflow-x: hidden;
-  background-color: #333;
+  background-color: #1c1c1c;
 }
 
 .navbar {
@@ -70,6 +70,9 @@ main {
   justify-content: center;
 }
 
-.navbar-nav>li.active {
-
+.navbar-nav>.active>a {
+  background-color: black !important;
+}
+.navbar-nav>li.active>a:first-letter {
+  color: #ff2f34;
 }
