--- a/app/assets/stylesheets/bootstrap_and_overrides.css
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css
@@ -73,6 +73,56 @@ main {
 .navbar-nav>.active>a {
   background-color: black !important;
 }
+
 .navbar-nav>li.active>a:first-letter {
   color: #ff2f34;
+}
+
+.modal-content {
+  background-color: #222;
+  border: solid 4px #aaa;
+}
+
+#work_form .form-wrap {
+  border-radius: 5px;
+  background-color: #333;
+  margin: 10px;
+  font-size: 25px;
+  font-weight: bold;
+  padding: 0 10px;
+  color: white;
+}
+
+#work_form .form-wrap.submit {
+  padding: 0;
+}
+
+.work_form-description {
+  height: 150px;
+}
+
+#work_form textarea {
+  font-size: 20px;
+  font-weight: normal;
+  background-color: #00000000;
+  border: none;
+  resize: none;
+  width: 100%;
+  color: white;
+  outline: none;
+}
+
+#work_form input[type=submit] {
+  border-radius: 5px;
+  text-transform: uppercase;
+  width: 100%;
+  background-color: #cc0066;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 30px;
+  font-weight: bold;
 }
