--- a/app/views/battles/show.html.haml
+++ b/app/views/battles/show.html.haml
@@ -7,5 +7,20 @@
       - battle.description.split("\r").each do |p|
         %p= p
       - if battle.current?
-        %h1 participate
+        %button.btn.btn-primary{ data: { toggle: 'modal', target: '#work_form' }} participate
     .col-lg-5
+
+.modal.fade#work_form{ tabindex: "-1", role: "dialog", 'aria-labelledby' => 'myModalLabel' }
+  .modal-dialog{ role: 'document'}
+    .modal-content
+      .modal-body
+        = form_for work, url: api_battle_works_path(battle_id: battle.id) do |f|
+          .image-loader
+          .form-wrap
+            Описание:
+            = f.text_area :description, class: 'work_form-description'
+          .form-wrap
+            Софт:
+            = f.text_area :software
+          .form-wrap.submit
+            = f.submit 'Отправить'
