--- a/app/views/battles/show.html.haml
+++ b/app/views/battles/show.html.haml
@@ -16,6 +16,14 @@
       .modal-body
         = form_for work, url: api_battle_works_path(battle_id: battle.id) do |f|
           .image-loader
+            .image.image-big
+            .image-rows
+              .image-rows-one
+                .image.image-one-one
+                .image.image-one-two
+              .image-rows-two
+                .image.image-two-one
+                .image.image-two-two
           .form-wrap
             Описание:
             = f.text_area :description, class: 'work_form-description'
